Use a kioslave job to get counts for faces. Add a special mode to use this count in the faces sidebar treeview.

BUG: 269375